# typ-p

./: README.md  buf.gen.yaml  proto.sh
dart/: pubspec.yaml
dart/lib/: typ_p.dart
dart/lib/pb/typ_p/: date.pb.dart  date.pbenum.dart  date.pbjson.dart  date_delta.pb.dart  date_delta.pbenum.dart  date_delta.pbjson.dart  date_range.pb.dart  date_range.pbenum.dart  date_range.pbjson.dart  date_time.pb.dart  date_time.pbenum.dart  date_time.pbjson.dart  number.pb.dart  number.pbenum.dart  number.pbjson.dart  uuid.pb.dart  uuid.pbenum.dart  uuid.pbjson.dart  (+3 more)
dart/test/: typ_p_test.dart
go/: array_value.go  date.go  date_delta.go  date_range.go  date_time.go  go.mod  go.sum  number.go  uuid.go  value.go
go/pb/typ_p/: date.pb.go  date_delta.pb.go  date_range.pb.go  date_time.pb.go  go.mod  number.pb.go  uuid.pb.go  value.pb.go
proto/: buf.yaml
proto/typ_p/: date.proto  date_delta.proto  date_range.proto  date_time.proto  number.proto  uuid.proto  value.proto
python/pb/typ_p/: date_delta_pb2.py  date_delta_pb2.pyi  date_pb2.py  date_pb2.pyi  date_range_pb2.py  date_range_pb2.pyi  date_time_pb2.py  date_time_pb2.pyi  helper.py  number_pb2.py  number_pb2.pyi  uuid_pb2.py  uuid_pb2.pyi  value_pb2.py  value_pb2.pyi
rust/typ-p/: Cargo.toml  build.rs
rust/typ-p/src/: lib.rs  pb.rs  typ_p.rs
rust/typ-p/src/pb/: typ_p.rs
rust/typ-p/src/typ_p/: array_value.rs  bool.rs  date.rs  date_delta.rs  date_range.rs  date_time.rs  firestore.rs  hashmap.rs  int.rs  number.rs  operator.rs  string.rs  uuid.rs  value.rs  value_compare.rs  value_of.rs  value_type.rs  vec.rs
