[package]
name = "typ-p"
version = "0.0.1"
edition = "2021"

build = "build.rs"

description = "typ is difine primitive type proto files."
license = "MIT OR Apache-2.0"

repository = "https://github.com/mippo-app/typ-p"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
err-derive = "~0"
log = "~0"
env_logger = "~0"

chrono = "~0"
chronoutil = "~0"

tonic = {version = "~0", features = ["transport", "tls", "gzip"]}
prost = "~0"
prost-types = "~0"


# derive_pb = { git = "https://github.com/mippo-app/derive_pb.git", branch = "main" }
# m-helper = { git = "https://github.com/mippo-app/helper.git", branch = "main" }
m-helper = "~0"
derive_pb = "~0"

uuid = {version = "1", features = ["serde", "v4"]}

regex = "1"
envy = "~0"
serde = {version = "1",  features = ["derive"] }

gcloud-sdk = { version = "~0", features = ["google-firestore-v1"] }

[build-dependencies]
tonic-build = "~0"
m-helper = "~0"
